--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit>=1.36
 pandas>=2.0
 numpy>=1.26
 openpyxl>=3.1
-chardet>=5.2           # détection encodage CSV
-pycountry>=24.6.1      # normalisation pays (optionnel, fallback prévu)
-phonenumbers>=8.13.45  # validation/format téléphones (optionnel)
-gender-guesser>=0.4    # déduction civilité par prénom (optionnel)
+chardet>=5.2
+pycountry>=24.6.1
+phonenumbers>=9.0
+gender-guesser>=0.4
